--- a/package.json
+++ b/package.json
@@ -9,8 +9,15 @@
     "lint:fix": "yarn lint --fix"
   },
   "dependencies": {
+    "@emotion/react": "^11.7.1",
+    "@emotion/styled": "^11.6.0",
+    "@mui/icons-material": "^5.2.4",
+    "@mui/material": "^5.2.4",
+    "axios": "^0.24.0",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "react-router-dom": "6",
+    "recoil": "^0.5.2"
   },
   "devDependencies": {
     "@types/react": "^17.0.33",
